# tweets

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/auth/: auth_model.py  auth_router.py  auth_service.py  pydantic_token.py
backend/db/: db_connection.py  db_tables.py  follow_table.py  profile_table.py  tweet_table.py  user_table.py
backend/models/: auth_models.py  profile_model.py  pydantic_Validation.py  tweets_model.py  user_model.py  validation_models.py
backend/repository/: profile_repo.py  tweet_repo.py  user_repo.py
backend/router/: comments.py  profile.py  profileRouter.py  router_profile.py  tweet.py  tweetRouter.py  userRouter.py
backend/services/: auth_service.py  profile_service.py  tweet_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Loader.jsx  homeFeed.jsx  index.js  sidebar.css  sidebarSection.jsx  tweetCard.jsx  tweetcard.css
frontend/src/components/css/: loader.css
frontend/src/context/: loginContex.js  loginContext.js
frontend/src/layout/: layout.css  mainLayout.jsx
frontend/src/pages/: AllTweets.jsx  createProfileForm.jsx  index.js  loginPage.jsx  profileEditForm.jsx  profileForm.jsx  profilePage.css  profilePage.jsx  profileform.css  registerPage.jsx  tweetForm.jsx
frontend/src/pages/css/: alltweets.css  createprofile.css  login.css  profilePage.css  profileeditform.css  register.css  tweetform.css
