[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg",
    "fastapi[standard]>=0.128.0",
    "greenlet",
    "pydantic-settings",
    "pydantic[email]",
    "sqlalchemy",
    "uvicorn",
]
